<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollCompletePayment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_grey_dark">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"

                android:contentDescription="@string/content_description_payment_image"
                android:src="@drawable/ticket_icon" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView6"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/pay_completed"
                android:textColor="@android:color/holo_green_light"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView10"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/ticket_sended"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView11"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/n_pedido"
                android:textSize="20sp" />

            <ikigaiworks.letseat.ui.view.animation.LikeButtonView_
                android:id="@+id/fav_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:text="@string/ticket_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <TextView
            android:id="@+id/ocultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/hide"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.74"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <RelativeLayout
            android:id="@+id/items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ocultar">

            <TextView
                android:id="@+id/name_restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/restaurant_name"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/name_restaurant"
                android:layout_below="@+id/name_restaurant"
                android:layout_marginTop="15dp"
                android:text="@string/company_name" />

            <TextView
                android:id="@+id/cif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/company_name"
                android:layout_below="@+id/company_name"
                android:layout_marginTop="2dp"
                android:text="@string/cif" />

            <TextView
                android:id="@+id/factura_simplificada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/cif"
                android:layout_below="@+id/cif"
                android:layout_marginTop="10dp"
                android:text="@string/factura_simplificada" />

            <TextView
                android:id="@+id/date_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/cif"
                android:layout_below="@+id/factura_simplificada"
                android:layout_marginTop="10dp"
                android:text="@string/fecha" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/factura_simplificada"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/date_str"
                tools:text="18/11/2017" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/ticket_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/name_restaurant"
                android:layout_below="@id/date"
                android:layout_marginTop="20dp"></android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/totalstr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/cif"
                android:layout_below="@+id/ticket_cart"
                android:layout_marginTop="20dp"
                android:text="@string/total"
                android:textStyle="bold" />

            <ikigaiworks.letseat.ui.view.customview.PriceTextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ticket_cart"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/totalstr"
                android:textStyle="bold"
                tools:text="8,75€" />

            <TextView
                android:id="@+id/iva_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ticket_cart"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/total"
                android:text="@string/iva"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/mostrador"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/items" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/goToHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            app:srcCompat="@drawable/ic_home_white_24dp"
            android:focusable="true" />


    </android.support.constraint.ConstraintLayout>


</ScrollView>