...
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_error_invalid_credentials_invalid">El usuario o la password no coinciden. Intentelo de nuevo.</string>
    <string name="login_error_unexpected">Ha ocurrido un error en la aplicación. Intentalo de nuevo más tarde.</string>
    <string name="login_error_format_mail">El formato del correo no es correcto, Intentalo de nuevo.</string>
    <string name="error_validation_fav_name">El campo del nombre no puede estar vacio</string>
    <string name="error_validation_is_fav">El pedido ya está añadido a favoritos</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="login">LOG IN</string>
    <string name="registro">SIGN UP</string>
...
    <string name="price">Precio: </string>
    <string name="delete">Borrar </string>
    <string name="fav_name">FAVOURITE NAME</string>
    <string name="amount_start">0</string>
    <string name="products">productos</string>
    <string name="total_2">Total</string>
    <string name="pay">PAGAR</string>
    <string name="go">GO!</string>
    <string name="hardcoded_name">SERGIO LIZANA MONTERO</string>
    <string name="hardcoded_account">1111-2222-333-444-5555</string>
    <string name="hardcoded_date">10/1992</string>
    <string name="hardcoded_number_card">123</string>
    <string name="add_text">Añadir</string>
...
